--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,77 @@
-Django>=4.1,<5.0
-djangorestframework
-yahoo_fin
+appdirs==1.4.4
+asgiref==3.8.1
+beautifulsoup4==4.12.3
+bs4==0.0.2
+CacheControl==0.14.1
+cachetools==5.5.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+cryptography==44.0.0
+cssselect==1.2.0
+Django==4.2.17
+django-cors-headers==4.6.0
+djangorestframework==3.15.2
+fake-useragent==2.0.1
+feedparser==6.0.11
+firebase==4.0.1
+firebase-admin==6.6.0
+frozendict==2.4.6
+google-api-core==2.24.0
+google-api-python-client==2.155.0
+google-auth==2.37.0
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.1
+google-cloud-firestore==2.19.0
+google-cloud-storage==2.19.0
+google-crc32c==1.6.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.66.0
+grpcio==1.68.1
+grpcio-status==1.68.1
+gunicorn==23.0.0
+html5lib==1.1
+httplib2==0.22.0
+idna==3.10
+importlib_metadata==8.5.0
+importlib_resources==6.4.5
+lxml==5.3.0
+msgpack==1.1.0
+multitasking==0.0.11
+numpy==2.1.3
+packaging==24.2
+pandas==2.2.3
+parse==1.20.2
+peewee==3.17.8
+platformdirs==4.3.6
+proto-plus==1.25.0
+protobuf==5.29.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+pyee==11.1.1
+PyJWT==2.10.1
+pyparsing==3.2.0
+pyppeteer==2.0.0
+pyquery==2.0.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.2
+requests==2.32.3
+requests-html==0.10.0
+rsa==4.9
+sgmllib3k==1.0.0
+six==1.17.0
+soupsieve==2.6
+sqlparse==0.5.2
+tqdm==4.67.1
+typing_extensions==4.12.2
+tzdata==2024.2
+uritemplate==4.1.1
+urllib3==1.26.20
+w3lib==2.2.1
+webencodings==0.5.1
+websockets==10.4
+yahoo-fin==0.8.9.1
+yfinance==0.2.50
+zipp==3.21.0
