--- a/requirements.txt
+++ b/requirements.txt
@@ -72,6 +72,7 @@ urllib3==1.26.20
 w3lib==2.2.1
 webencodings==0.5.1
 websockets==10.4
+whitenoise==6.8.2
 yahoo-fin==0.8.9.1
 yfinance==0.2.50
 zipp==3.21.0
